@@ -1,0 +1,3 @@
+#A package
+
+from tdh.metadata.sources.activities import ActivitiesQuerySourceFactory
